--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.username=sa
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3307/gamereviewdb
+spring.datasource.username=root
 spring.datasource.password=
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.ddl-auto:update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
 
-spring.datasource.generate-unique-name=false
-spring.datasource.name=test
+
+!spring.h2.console.enabled=true
+!spring.h2.console.path=/h2-console
+!spring.datasource.username=sa
+!spring.datasource.password=
+
+!spring.datasource.generate-unique-name=false
+!spring.datasource.name=test
